Modified Home Page

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <img class="logo" src="./assets/swan.jpg" alt="swan-icon" />
                 <h1>Swan Travel</h1>
                 <ul class="navigation__links">
-                    <li><a href=""></a>Destinations</li>
-                    <li><a href=""></a>Contact Us</li>
-                    <li><a href=""></a>Deals</li>
-                    <li><a href=""></a>About Us</li>
+                    <li><a href="destination.html">Destinations</a></li>
+                    <li><a href="contact-us.html">Contact Us</a></li>
+                    <li><a href="">Deals</a></li>
+                    <li><a href="">About Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -42,9 +42,15 @@
                     muted
                     src="./assets/video.mov"
                 ></video>
+                <p>
+                    We craft and customize the perfect trip for you. Hassle
+                    free, people-centered, local and ethical. 24/7 Customer
+                    Support. Safe and Secure Booking. Customized Itineraries.
+                    Expert Travel Advice.
+                </p>
             </div>
             <section class="top-destinations">
-                <h2>Choose your favorite Journey</h2>
+                <h2>Choose your next Travel Destination</h2>
                 <ol>
                     <li class="top-destinations_links">
                         <div class="top-destinations_links_left">
