Add some changes

--- a/index.html
+++ b/index.html
@@ -23,112 +23,126 @@
                     <li><a href="destination.html">Destinations</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
                     <li><a href="">Deals</a></li>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="#aboutus">About Us</a></li>
                 </ul>
             </nav>
         </header>
         <section id="hero-section">
-            <div class="hero-section_container">
-                <img
-                    class="hero-section_img"
-                    src="./assets/travel.jpg"
-                    alt="City"
-                />
-                <h2>Make your Journey safer and more pleasant with Us</h2>
-
-                <video
-                    class="hero-section_video"
-                    autoplay
-                    muted
-                    src="./assets/video.mov"
-                ></video>
-                <p>
-                    We craft and customize the perfect trip for you. Hassle
-                    free, people-centered, local and ethical. 24/7 Customer
-                    Support. Safe and Secure Booking. Customized Itineraries.
-                    Expert Travel Advice.
-                </p>
+            <div class="hero-section__container">
+                <div class="hero-section__background">
+                    <div class="hero-section__descr">
+                        <h2>Let's Travel with</h2>
+                        <h3>S w a n</h3>
+                    </div>
+                </div>
             </div>
-            <section class="top-destinations">
-                <h2>Choose your next Travel Destination</h2>
-                <ol>
-                    <li class="top-destinations_links">
-                        <div class="top-destinations_links_left">
-                            <strong>EUROPE.</strong> The options for travel
-                            experiences in Europe are endless: river cruising
-                            along the Rhine; sleeping in ancient castles;
-                            exploring hidden beaches in Greece; running with the
-                            bulls in Barcelona; or eating and drinking your way
-                            through Italy. We will help you create the European
-                            vacation itinerary of your dreams.
-                        </div>
+        </section>
+        <section class="about-section">
+            <div class="about-section__container">
+                <div class="about-section__container__left">
+                    <h2 id="aboutus">
+                        Make your Journey safer and more pleasant with Us
+                    </h2>
+                    <p>
+                        We craft and customize the perfect trip for you. Our
+                        team provides beautifully designed experience to book
+                        all flights, hotels, and cars. Incentivize employees to
+                        make better decisions and maximize savings by rewarding
+                        them when they come under budget. Gain access to our
+                        negotiated rates, savings that are typically reserved
+                        for large corporations, and diverse flight and hotel
+                        inventory. Our dedicated team of travel agents are
+                        available 24 hours and 7 days a week.
+                    </p>
+                </div>
+                <div class="about-section__container_right">
+                    <video
+                        class="about-section__video"
+                        autoplay
+                        muted
+                        src="./assets/video.mov"
+                    ></video>
+                </div>
+            </div>
+        </section>
+        <section class="top-destinations">
+            <h2>We help you to choose your next Travel Destination</h2>
+            <ol>
+                <li class="top-destinations__links">
+                    <div class="top-destinations__links__left">
+                        <strong>EUROPE.</strong> The options for travel
+                        experiences in Europe are endless: river cruising along
+                        the Rhine; sleeping in ancient castles; exploring hidden
+                        beaches in Greece; running with the bulls in Barcelona;
+                        or eating and drinking your way through Italy. We will
+                        help you create the European vacation itinerary of your
+                        dreams.
+                    </div>
 
-                        <div class="top-destinations_links_right">
-                            <img src="./assets/europe.jpg" alt="europe" />
-                        </div>
-                    </li>
-                    <li class="top-destinations_links">
-                        <div class="top-destinations_links_left">
-                            <strong>ALASKA.</strong>
-                            Combining a cruise with land tours and excursions is
-                            how you should experience Alaska! Everything here is
-                            larger than life and picture perfect - the tallest
-                            peaks, the longest coastline, the awe-inspiring
-                            glaciers, and encounters with wildlife you thought
-                            only National Geographic could capture.
-                        </div>
+                    <div class="top-destinations__links__right">
+                        <img src="./assets/europe.jpg" alt="europe" />
+                    </div>
+                </li>
+                <li class="top-destinations__links">
+                    <div class="top-destinations__links__left">
+                        <strong>ALASKA.</strong>
+                        Combining a cruise with land tours and excursions is how
+                        you should experience Alaska! Everything here is larger
+                        than life and picture perfect - the tallest peaks, the
+                        longest coastline, the awe-inspiring glaciers, and
+                        encounters with wildlife you thought only National
+                        Geographic could capture.
+                    </div>
 
-                        <div class="top-destinations_links_right">
-                            <img src="./assets/alaska.jpg" alt="alaska" />
-                        </div>
-                    </li>
-                    <li class="top-destinations_links">
-                        <div class="top-destinations_links_left">
-                            <strong>HAWAII.</strong> Each of the Hawaiian
-                            islands offers its own slice of paradise. This state
-                            rich in culture offers white sandy beaches,
-                            snorkling and water sports, unique hiking
-                            opportunities, delicious cuisine, and a vibrant
-                            nightlife. Tell us what you’re looking for, and
-                            we’ll handle the rest.
-                        </div>
+                    <div class="top-destinations__links__right">
+                        <img src="./assets/alaska.jpg" alt="alaska" />
+                    </div>
+                </li>
+                <li class="top-destinations__links">
+                    <div class="top-destinations__links__left">
+                        <strong>HAWAII.</strong> Each of the Hawaiian islands
+                        offers its own slice of paradise. This state rich in
+                        culture offers white sandy beaches, snorkling and water
+                        sports, unique hiking opportunities, delicious cuisine,
+                        and a vibrant nightlife. Tell us what you’re looking
+                        for, and we’ll handle the rest.
+                    </div>
 
-                        <div class="top-destinations_links_right">
-                            <img src="./assets/hawaii.jpg" alt="hawaii" />
-                        </div>
-                    </li>
-                    <li class="top-destinations_links">
-                        <div class="top-destinations_links_left">
-                            <strong>GEORGIA.</strong> This country's landscape
-                            is breathtaking and there is no exaggeration in this
-                            statement. It's a relatively small country but
-                            offers so much: Black Sea beaches (mostly full of
-                            stones but still decent enough to spend some
-                            relaxing time at), high Caucasus and lower lush
-                            mountains, incredible caves, green valleys and more.
-                        </div>
+                    <div class="top-destinations__links__right">
+                        <img src="./assets/hawaii.jpg" alt="hawaii" />
+                    </div>
+                </li>
+                <li class="top-destinations__links">
+                    <div class="top-destinations__links__left">
+                        <strong>GEORGIA.</strong> This country's landscape is
+                        breathtaking and there is no exaggeration in this
+                        statement. It's a relatively small country but offers so
+                        much: Black Sea beaches (mostly full of stones but still
+                        decent enough to spend some relaxing time at), high
+                        Caucasus and lower lush mountains, incredible caves,
+                        green valleys and more.
+                    </div>
 
-                        <div class="top-destinations_links_right">
-                            <img src="./assets/georgia.jpg" alt="georgia" />
-                        </div>
-                    </li>
-                    <li class="top-destinations_links">
-                        <div class="top-destinations_links_left">
-                            <strong>TURKEY.</strong> Historic ruins, bustling
-                            cities, beautiful beaches, mountains, shopping,
-                            excellent food, and all at an affordable price. So
-                            whatever you're looking for, be it a short city trip
-                            to Istanbul, a beach holiday along the south coast,
-                            or a place to travel for a while with a mix of
-                            everything, Turkey could be for you.
-                        </div>
+                    <div class="top-destinations__links__right">
+                        <img src="./assets/georgia.jpg" alt="georgia" />
+                    </div>
+                </li>
+                <li class="top-destinations__links">
+                    <div class="top-destinations__links__left">
+                        <strong>TURKEY.</strong> Historic places, bustling
+                        cities, beautiful beaches, mountains, shopping,
+                        excellent food, and all at an affordable price. So
+                        whatever you're looking for, be it a short city trip to
+                        Istanbul, a beach holiday along the south coast, or a
+                        place to travel for a while with a mix of everything,
+                        Turkey could be for you.
+                    </div>
 
-                        <div class="top-destinations_links_right">
-                            <img src="./assets/turkey.jpg" alt="turkey" />
-                        </div>
-                    </li>
-                </ol>
-            </section>
+                    <div class="top-destinations__links__right">
+                        <img src="./assets/turkey.jpg" alt="turkey" />
+                    </div>
+                </li>
+            </ol>
         </section>
     </body>
 </html>
