--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <img class="logo" src="./assets/swan.jpg" alt="swan-icon" />
                 <h1>Swan Travel</h1>
                 <ul class="navigation__links">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="destination.html">Destinations</a></li>
                     <li><a href="contact-us.html">Contact Us</a></li>
-                    <li><a href="">Deals</a></li>
+
                     <li><a href="#aboutus">About Us</a></li>
                 </ul>
             </nav>
